--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 
 {
-  "name": "Astro-Md",
+  "name": "Alex-MD",
   "version": "0.0.6",
   "description": "Multi device whatsapp bot.",
   "main": "index.js",
@@ -18,8 +18,8 @@
 "keywords": [
 "whatsapp"
 ],
-"author": "VihangaYT",
-"developer": "VihangaYT",
+"author": "Alex",
+"developer": "Alex",
 "license": "GPL-3.0-or-later",
 "homepage": "https://github.com/",
 "dependencies": {
